Visibility MQ prefix fix

--- a/source/sass/70_utilities/_utilities.visibility.scss
+++ b/source/sass/70_utilities/_utilities.visibility.scss
@@ -5,28 +5,28 @@
 //
 //    e.g.
 //
-//    <div class="hidden-xs">
+//    <div class="u-hidden-xs">
 //        This element will be hidden on screen size xs
 //    </div>
 //
 
 @each $visibility-modifier, $visibility-media in $breakpoint-list {
 
-    .u-visible-#{$visibility-modifier},
-    .u-visible-#{$visibility-modifier}-block,
-    .u-visible-#{$visibility-modifier}-table-cell,
-    .u-visible-#{$visibility-modifier}-inline-block,
-    .u-visible-#{$visibility-modifier}-inline             {      display: none            !important; }
+    .u-visible--#{$visibility-modifier},
+    .u-visible--#{$visibility-modifier}-block,
+    .u-visible--#{$visibility-modifier}-table-cell,
+    .u-visible--#{$visibility-modifier}-inline-block,
+    .u-visible--#{$visibility-modifier}-inline             {      display: none            !important; }
 
 
     @media #{$visibility-media} {
 
-        .u-visible-#{$visibility-modifier},
-        .u-visible-#{$visibility-modifier}-block          {      display: block           !important; }
-        .u-visible-#{$visibility-modifier}-table-cell     {      display: table-cell      !important; }
-        .u-visible-#{$visibility-modifier}-inline-block   {      display: inline-block    !important; }
-        .u-visible-#{$visibility-modifier}-inline         {      display: inline          !important; }
-        .u-hidden-#{$visibility-modifier}                 {      display: none            !important; }
+        .u-visible--#{$visibility-modifier},
+        .u-visible--#{$visibility-modifier}-block          {      display: block           !important; }
+        .u-visible--#{$visibility-modifier}-table-cell     {      display: table-cell      !important; }
+        .u-visible--#{$visibility-modifier}-inline-block   {      display: inline-block    !important; }
+        .u-visible--#{$visibility-modifier}-inline         {      display: inline          !important; }
+        .u-hidden--#{$visibility-modifier}                 {      display: none            !important; }
 
     }
 
